<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_music_rating"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.uantwerpen.ds.iot.musicratingbox.MusicRating">

    <TextView
        android:text="@string/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/songArtistTextView"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_alignRight="@+id/songTitleTextView"
        android:layout_alignEnd="@+id/songTitleTextView"
        android:layout_alignLeft="@+id/songTitleTextView"
        android:layout_alignStart="@+id/songTitleTextView"
        android:visibility="invisible"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_song_currently_playing"
        android:id="@+id/songTitleTextView"
        android:layout_marginTop="10dp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:textSize="24sp" />

    <TextView
        android:text="@string/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:id="@+id/songAlbumTextView"
        android:textAlignment="center"
        android:layout_alignRight="@+id/songArtistTextView"
        android:layout_alignEnd="@+id/songArtistTextView"
        android:layout_alignLeft="@+id/songArtistTextView"
        android:layout_alignStart="@+id/songArtistTextView"
        android:visibility="invisible" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_thumb_down_black_24dp"
        android:id="@+id/redButton"
        app:backgroundTint="#a30808"
        android:tint="@android:color/background_light"
        android:onClick="onClickRed"
        android:layout_alignTop="@+id/greenButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@drawable/ic_thumb_up_black_24dp"
        android:id="@+id/greenButton"
        android:onClick="onClickGreen"
        app:backgroundTint="#24a308"
        android:tint="@android:color/background_light"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:fabSize="normal"
        android:scaleType="center"
        android:visibility="invisible" />

    <Button
        android:text="@string/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/reconnectButton"
        android:onClick="reconnectMQTT"
        android:visibility="invisible" />

    <TextView
        android:text="@string/cannot_establish_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reconnectTextView"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginBottom="34dp"
        android:layout_above="@+id/reconnectButton"
        android:layout_centerHorizontal="true" />




    <android.support.v7.widget.CardView
        android:id="@+id/songAlbumCardView"
        android:visibility="invisible"
        android:scaleType="centerCrop"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_below="@+id/songAlbumTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp">

        <ImageView
            app:srcCompat="@drawable/ic_headset_black_35dp"
            android:id="@+id/songAlbumImageView"
            android:scaleX="5"
            android:scaleY="5"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:adjustViewBounds="false" />

    </android.support.v7.widget.CardView>


</RelativeLayout>
